Add groundwork for scoring
Add column and row indices for elements, add
coordinates to hashes for each color's dots

--- a/index.html
+++ b/index.html
@@ -6,9 +6,7 @@
 </head>
 <body onload="initialize();">
 	<nav class="menu">
-		<ul>
-			<li>Menu item</li>
-		</ul>
+		<button onclick="initialize();">Reset</button>
 	</nav>
 	<p id="flash"></p>
 	<section class="board">
