Add scoreboard functionality

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 <body onload="initialize();">
 	<nav class="menu">
 		<button onclick="initialize();">Reset</button>
+		<div id="scoreboard"></div>
 	</nav>
 	<p id="flash"></p>
 	<section class="board">
