--- a/index.html
+++ b/index.html
@@ -1,18 +1,18 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-	<meta charset="UTF-8"/>
-	<title>Connect Four</title>
+  <meta charset="UTF-8"/>
+  <link rel="stylesheet" href="./css/styles.css" class="styles">
+  <title>Connect Four</title>
 </head>
-<body onload="initialize();">
-	<nav class="menu">
-		<button onclick="initialize();">Reset</button>
-		<div id="scoreboard"></div>
-	</nav>
-	<p id="flash"></p>
-	<section class="board">
-	</section>
-	<link rel="stylesheet" href="./css/styles.css" class="styles">
-	<script src="./js/connect-four.js"></script>
+<body>
+  <nav class="menu">
+    <button id="reset">Reset</button>
+    <div id="scoreboard"></div>
+  </nav>
+  <p id="flash"></p>
+  <section class="board">
+  </section>
 </body>
+<script src="./js/connect-four.js"></script>
 </html>
