--- a/index.html
+++ b/index.html
@@ -13,6 +13,6 @@
   <p id="flash"></p>
   <section class="board">
   </section>
+  <script src="./js/bundle.js"></script>
 </body>
-<script src="./js/connect-four.js"></script>
 </html>
