Refactor to be more functional
Allow constants like player color, rows, and columns to be passed in on
init.
Reduce spread of DOM manipulation across a few functions.
Add build script to package.json.
Remove bundle.js from repo. Users can view the game on GitHub Pages or
build from source.
Add Travis integration.

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <body>
   <nav class="menu">
     <button id="reset">Reset</button>
-    <div id="scoreboard"></div>
+    <div id="scoreboard">Red: 0 Yellow: 0</div>
   </nav>
   <p id="flash"></p>
   <section class="board">
