--- a/index.html
+++ b/index.html
@@ -9,20 +9,33 @@
   <div class="menu modal">
     <label>Player One:</label>
     <select name="playerOne">
-      <option selected>Yellow</option>
-      <option>Red</option>
+      <option selected value='yellow'>Yellow</option>
+      <option value='red' disabled>Red</option>
+      <option value='orange'>Orange</option>
+      <option value='green'>Green</option>
+      <option value='blue'>Blue</option>
     </select>
+    <br>
     <label>Player Two:</label>
     <select name="playerTwo">
-      <option>Yellow</option>
-      <option selected>Red</option>
+      <option selected value='red'>Red</option>
+      <option value='yellow' disabled>Yellow</option>
+      <option value='orange'>Orange</option>
+      <option value='green'>Green</option>
+      <option value='blue'>Blue</option>
     </select>
+    <br>
+    <label>Rows:</label>
+    <input type='number' name='rows' value='6' min='1'>
+    <label>Columns:</label>
+    <input type='number' name='columns' value='7' min='1'>
+    <br>
     <button id="start">Start!</button>
   </div>
   <nav>
-    <button id="reset">Reset</button>
+    <button id="reset" class="hide">Reset</button>
   </nav>
-  <div id="scoreboard">Red: 0 Yellow: 0</div>
+  <div id="scoreboard"></div>
   <p id="flash"></p>
   <section class="board">
   </section>
